feat(web): create reset password and reset password complete routes

--- a/packages/web/src/locales/resources/tr/auth.json
+++ b/packages/web/src/locales/resources/tr/auth.json
@@ -97,5 +97,54 @@
         "invalid": "Şifreniz en az bir büyük harf, bir küçük harf ve bir rakam içermelidir."
       }
     }
+  },
+  "resetPassword": {
+    "alt": "Şifre Sıfırlama",
+    "title": "Şifrenizi Sıfırlayın",
+    "subtitle": "Şifrenizi sıfırlamak için e-posta adresinizi girin. Size bir şifre sıfırlama bağlantısı göndereceğiz.",
+    "form": {
+      "email": {
+        "placeholder": "E-posta adresiniz",
+        "required": "Lütfen e-posta adresinizi giriniz.",
+        "invalid": "Lütfen geçerli bir e-posta adresi giriniz."
+      },
+      "submit": "Şifre Sıfırlama Bağlantısı Gönder"
+    },
+    "resetPasswordSuccess": {
+      "alt": "Şifre Sıfırlama",
+      "title": "Şifre Sıfırlama Bağlantısı Gönderildi",
+      "content": "E-posta adresinize şifre sıfırlama bağlantısı gönderdik. Lütfen e-postanızı kontrol edin ve içindeki bağlantıya tıklayın.",
+      "openGmail": "Gmail'i Aç",
+      "openOutlook": "Outlook'u Aç",
+      "linkNotReceived": "E-posta adresinize bağlantı gelmedi mi?",
+      "checkSpam": "Spam klasörünüzü kontrol edin, <0>tekrar gönderin</0> veya <1>adresinizi değiştirin</1>."
+    },
+    "emailResend": {
+      "title": "E-posta Gönderildi",
+      "content": "Lütfen e-posta kutunuzu kontrol edin."
+    },
+    "backToLogin": "Giriş yapmak için <0>buraya</0> tıklayın"
+  },
+  "resetPasswordComplete": {
+    "alt": "Yeni Şifrenizi Belirleyin",
+    "title": "Yeni Şifrenizi Belirleyin",
+    "subtitle": "Şifrenizi sıfırlamak için lütfen yeni şifrenizi girin.",
+    "form": {
+      "password": {
+        "placeholder": "Yeni Şifreniz",
+        "required": "Lütfen yeni şifrenizi giriniz.",
+        "minLength": "Lütfen en az 6 karakter giriniz.",
+        "maxLength": "Şifreniz en fazla 32 karakter olmalıdır.",
+        "invalid": "Şifreniz en az bir büyük harf, bir küçük harf ve bir rakam içermelidir."
+      },
+      "submit": "Şifremi Sıfırla"
+    },
+    "backToLogin": "Giriş yapmak için <0>buraya</0> tıklayın",
+    "resetPasswordCompleteSuccess": {
+      "alt": "Şifre Sıfırlama",
+      "title": "Şifreniz Başarıyla Sıfırlandı",
+      "content": "Şifreniz başarıyla sıfırlandı. Şimdi giriş yapabilirsiniz.",
+      "login": "Giriş Yap"
+    }
   }
 }
