feat(web): add new translations

--- a/packages/web/src/locales/resources/tr/auth.json
+++ b/packages/web/src/locales/resources/tr/auth.json
@@ -81,7 +81,7 @@
         "placeholder": "Okulunuzun Adı",
         "required": "Lütfen okulunuzun adınıs giriniz.",
         "minLength": "Lütfen en az 3 karakter giriniz.",
-        "maxLength": "Okuluunuzun adı en fazla 50 karakter olmalıdır."
+        "maxLength": "Okulunuzun adı en fazla 50 karakter olmalıdır."
       },
       "principalName": {
         "placeholder": "Okul Müdürünüzün Adı",
