feat(web): add new translations

--- a/packages/web/src/locales/resources/tr/common.json
+++ b/packages/web/src/locales/resources/tr/common.json
@@ -2,6 +2,7 @@
   "form": {
     "edit": "Düzenle",
     "save": "Kaydet",
+    "delete": "Sil",
     "cancel": "Vazgeç",
     "update": "Güncelle",
     "submit": "Değişiklikleri Kaydet"
