--- a/packages/web/src/locales/resources/tr/teachers.json
+++ b/packages/web/src/locales/resources/tr/teachers.json
@@ -1,21 +1,30 @@
 {
+  "table": {
+    "edit": "Düzenle",
+    "search": "Öğretmen ara...",
+    "bulkDelete": "Seçili Öğretmenleri Sil",
+    "columns": {
+      "name": "Ad Soyad",
+      "branch": "Branş",
+      "actions": "İşlemler",
+      "description": "Açıklama",
+      "idNumber": "TC Kimlik No"
+    },
+    "emptyState": {
+      "title": "Öğretmen bulunamadı",
+      "description": "Öğretmen eklemek için lütfen 'Yeni Öğretmen Ekle' butonuna tıklayınız."
+    }
+  },
   "createTeacher": {
     "title": "Öğretmen Ekle",
     "success": "Öğretmen başarıyla oluşturuldu.",
     "form": {
-      "firstName": {
-        "label": "Öğretmenin Adı",
-        "placeholder": "Öğretmenin adını giriniz",
-        "required": "Lütfen öğretmenin adını giriniz.",
+      "name": {
+        "label": "Öğretmenin Adı-Soyadı",
+        "placeholder": "Öğretmenin adını ve soyadını giriniz",
+        "required": "Lütfen öğretmenin adını ve soyadını giriniz.",
         "minLength": "Lütfen en az 3 karakter giriniz.",
-        "maxLength": "Öğretmenin adı en fazla 50 karakter olmalıdır."
-      },
-      "lastName": {
-        "label": "Öğretmenin Soyadı",
-        "placeholder": "Öğretmenin soyadını giriniz",
-        "required": "Lütfen öğretmenin soyadını giriniz.",
-        "minLength": "Lütfen en az 3 karakter giriniz.",
-        "maxLength": "Öğretmenin soyadı en fazla 50 karakter olmalıdır."
+        "maxLength": "Öğretmenin adı ve soyadı en fazla 50 karakter olmalıdır."
       },
       "branch": {
         "label": "Öğretmenin Branşı",
@@ -23,6 +32,13 @@
         "required": "Lütfen öğretmenin branşını giriniz.",
         "minLength": "Lütfen en az 3 karakter giriniz.",
         "maxLength": "Öğretmenin branşı en fazla 50 karakter olmalıdır."
+      },
+      "description": {
+        "label": "Öğretmenin Açıklaması",
+        "placeholder": "Örn: Öğrt. / Müdür / Md. Yard.",
+        "required": "Lütfen öğretmenin açıklamasını giriniz.",
+        "minLength": "Lütfen en az 3 karakter giriniz.",
+        "maxLength": "Öğretmenin açıklaması en fazla 50 karakter olmalıdır."
       },
       "idNumber": {
         "label": "Öğretmenin TC Kimlik Numarası",
@@ -37,19 +53,12 @@
     "title": "Öğretmeni Güncelle",
     "success": "Öğretmen başarıyla güncellendi.",
     "form": {
-      "firstName": {
-        "label": "Öğretmenin Adı",
-        "placeholder": "Öğretmenin adını giriniz",
-        "required": "Lütfen öğretmenin adını giriniz.",
+      "name": {
+        "label": "Öğretmenin Adı-Soyadı",
+        "placeholder": "Öğretmenin adını ve soyadını giriniz",
+        "required": "Lütfen öğretmenin adını ve soyadını giriniz.",
         "minLength": "Lütfen en az 3 karakter giriniz.",
-        "maxLength": "Öğretmenin adı en fazla 50 karakter olmalıdır."
-      },
-      "lastName": {
-        "label": "Öğretmenin Soyadı",
-        "placeholder": "Öğretmenin soyadını giriniz",
-        "required": "Lütfen öğretmenin soyadını giriniz.",
-        "minLength": "Lütfen en az 3 karakter giriniz.",
-        "maxLength": "Öğretmenin soyadı en fazla 50 karakter olmalıdır."
+        "maxLength": "Öğretmenin adı ve soyadı en fazla 50 karakter olmalıdır."
       },
       "branch": {
         "label": "Öğretmenin Branşı",
@@ -57,6 +66,13 @@
         "required": "Lütfen öğretmenin branşını giriniz.",
         "minLength": "Lütfen en az 3 karakter giriniz.",
         "maxLength": "Öğretmenin branşı en fazla 50 karakter olmalıdır."
+      },
+      "description": {
+        "label": "Öğretmenin Açıklaması",
+        "placeholder": "Örn: Öğrt. / Müdür / Md. Yard.",
+        "required": "Lütfen öğretmenin açıklamasını giriniz.",
+        "minLength": "Lütfen en az 3 karakter giriniz.",
+        "maxLength": "Öğretmenin açıklaması en fazla 50 karakter olmalıdır."
       },
       "idNumber": {
         "label": "Öğretmenin TC Kimlik Numarası",
@@ -66,5 +82,17 @@
         "maxLength": "Öğretmenin TC kimlik numarası en fazla 11 karakter olmalıdır."
       }
     }
+  },
+  "deleteTeacher": {
+    "title": "Öğretmeni Sil",
+    "message": "<0>{{name}}</0> isimli öğretmeni silmek istediğinize emin misiniz?",
+    "warning": "Bu işlem geri alınamaz ve mevcut belgeleri etkileyebilir.",
+    "success": "Öğretmen başarıyla silindi."
+  },
+  "bulkDeleteTeacher": {
+    "title": "Öğretmenleri Sil",
+    "message": "Seçilen öğretmenleri silmek istediğinize emin misiniz?",
+    "warning": "Bu işlem geri alınamaz ve mevcut belgeleri etkileyebilir.",
+    "success": "Seçilen öğretmenler başarıyla silindi."
   }
 }
